# EdgePlug

./: README.md  integration_test_report.json  manifest.proto
.github/workflows/: ml_build.yml
docs/: architecture.md  prompt02_fixes.md  prompt02_summary.md  prompt03_summary.md  prompt04_summary.md  prompt05_summary.md  prompt06_summary.md  prompt07_summary.md  prompt08_summary.md  prompt09_summary.md  prompt10_summary.md  prompt11_summary.md  prompt12_summary.md  requirements.md  threat_model.md
marketplace/: Dockerfile  README.md  config.yaml  docker-compose.yml  go.mod  go.sum  main.go
marketplace/config/: config.go
marketplace/desktop/: package.json
marketplace/desktop/src/main/: main.ts
marketplace/handlers/: admin.go  handlers.go
marketplace/load-testing/: k6-load-test.js  k6-stress-test.js
marketplace/middleware/: middleware.go
marketplace/migrations/: 001_initial_schema.sql
marketplace/models/: models.go
marketplace/monitoring/: prometheus.yml
marketplace/sbom/: generate-sbom.sh  generate-security-report.ps1
marketplace/services/: agent.go  auth.go  user.go
models/: README.md  pipeline.py  requirements.txt
models/adversarial/: deepxplore.py
models/config/: voltage_event.yaml
models/data/: generator.py
models/quantization/: quantize.py
models/training/: train.py
models/voltage_event/: README.md  requirements.txt
models/voltage_event/config/: model_spec.yaml
models/voltage_event/notebooks/: 01_data_preparation.ipynb
runtime/: CMakeLists.txt
runtime/docs/: memory_map.md
runtime/include/: actuator.h  agent_loader.h  crypto_impl.h  edgeplug_runtime.h  hotswap.h  infer.h  preprocess.h
runtime/src/: CMakeLists.txt  actuator.c  agent_loader.c  bootloader_patch.c  crypto_impl.c  edgeplug_runtime.c  hotswap.c  infer.c  preprocess.c
runtime/tests/: CMakeLists.txt  run_tests.py  test_actuator.c  test_agent_loader.c  test_crypto.c  test_hotswap.c  test_infer.c  test_preprocess.c  test_runtime.c
security-reports/: comprehensive-security-report.html  vulnerability-summary.json
tests/: hotswap_chaos_test.py  hotswap_stress_test.py  integration_test.py
tests/security/: renode_penetration_test.py
tools/: edgeplug-push  sign_manifest.py
ui/: .eslintrc.js  README.md  i18n.ts  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
ui/.github/workflows/: accessibility.yml
ui/.storybook/: main.ts  preview.ts
ui/components/: Alerts.tsx  AppShell.stories.tsx  AppShell.tsx  Badge.stories.tsx  Badge.tsx  Button.stories.tsx  Button.tsx  Canvas.stories.tsx  Canvas.tsx  DiffPreview.tsx  Drawer.stories.tsx  Drawer.tsx  GuardTripModal.tsx  HighFidelityPrototype.tsx  LatencyBadge.tsx  Marketplace.tsx  Modal.stories.tsx  Modal.tsx  OfflineBanner.tsx  PerformanceMonitor.tsx  Router.stories.tsx  Router.tsx  Skeleton.stories.tsx  Skeleton.tsx  Toast.stories.tsx  Toast.tsx  Tooltip.stories.tsx  Tooltip.tsx  Wireframes.tsx  index.ts
ui/components/__tests__/: AppShell.test.tsx  Skeleton.test.tsx
ui/demo/: ComprehensiveDemo.tsx  HighFidelityDemo.tsx  RouterDemo.tsx  WireframeDemo.tsx  index.html  main.tsx
ui/design-system/: README.md  animations.json  tokens.css
ui/hooks/: useLatencyBadge.ts  useTranslation.ts
ui/locales/: en.json  fr.json
ui/schema/: edgeplug.ts
ui/scripts/: accessibility-test.js  usability-test.ts
ui/styles/: globals.css
ui/tests/: accessibility.spec.ts
ui/utils/: cn.ts
